# Serious-Programming-Language

./: Build.bat  Build.sh  CMakeLists.txt  Compiler.cpp  CompilerCommandForDynamicLinking.sh  DependencyResolution.json  DynamicPluginLoader.cpp  ExecuteTheLang.sh  Installlibcurl.sh  LazyLoading.cpp  Linking.vacx  Manual.doc  README.md  RunDependencyScript.sh  Setup_Compiler.bat  Syntax.vacx  ThreadPooling.cpp
REALCOMPILER/: Lexer.vba  Parser.cpp  StubAssemblyGenerationFramework.cpp
REALCOMPILER/AssemblyOptimizations/: ManualMemoryManagementAndStackHeapUsage.asm  RegisterAllocationandUsage.asm  StackMemoryUsageAndFunctionCalls.asm
compiler_backend/: CMakeLists.txt
compiler_backend/include/: parser.h
compiler_backend/include/compiler_backend/src/: parser.cpp
compiler_backend/include/compiler_backend/src/thread_pool/: CMakeLists.txt
compiler_backend/include/compiler_backend/src/thread_pool/thread_pool/include/: thread_pool.h
compiler_backend/include/compiler_backend/src/thread_pool/thread_pool/include/thread_pool/src/: thread_pool.cpp
distributed_linking/: CMakeLists.txt
distributed_linking/include/: distributed_linker.h
distributed_linking/src/: distributed_linker.cpp
src/: main.cpp
